# Secure-Journal

./: Cargo.toml  README.md  dist-workspace.toml  package-lock.json
.cargo/: config.toml
.github/workflows/: release.yml  release.yml.disabled
backend/: Cargo.toml  journal_export_ibrahim_2025-11-25_12-09.md
backend/data/: journal.db
backend/src/: db.rs  main.rs  router.rs
backend/src/auth/: delete.rs  entries.rs  login.rs  mod.rs  signup.rs  validate.rs
backend/src/auth/api/: login_api.rs  mod.rs  signup_api.rs
backend/src/auth/http/: login_handler.rs  mod.rs  signup_handler.rs  types.rs
backend/src/common/: utils.rs
backend/src/models/: models.rs
build-scripts/: build-all.sh  build-android.sh  build-deb.sh  build-linux.sh  build-native.sh  build-smart.sh  build-windows.ps1  package-releases.sh
frontend/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs
frontend/assets/: main.css  tailwind.css
frontend/src/: api.rs  main.rs  models.rs  state.rs
frontend/src/components/: navbar.rs
frontend/src/pages/: entries.rs  home.rs  login.rs  mod.rs  new_entry.rs  signup.rs
mydb/: 000009.sst  IDENTITY  MANIFEST-000005  OPTIONS-000007
src/: auth.rs  db.rs  main.rs  menu.rs  models.rs
src/auth/: delete.rs  entries.rs  login.rs  signup.rs
src/common/: errors.rs  utils.rs
src/helpers/: export.rs  import.rs
src/models/: models.rs
