[package]
name = "secure_journal"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
rand_core = "=0.5.1"
dialoguer = "0.12.0"
rpassword = "7.4.0"
serde = "1.0.228"
surreal = "0.4.1"
surrealdb = "2.3.10"
tokio = "1.47.1"
uuid = "1.18.1"
rand = "0.9.2"
colored = "3.0.0"
