[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
rand_core = "0.9.3"
dialoguer = "0.12.0"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "2.4.0", features = ["kv-mem"] } #kv-mem #kv-rocksdb #kv-sqlite
uuid = "1.18.1"
rand = { version = "0.9.2", features = ["std"] }
colored = "3.0.0"
anyhow = "1.0.100"
indicatif = "0.18.2"
thiserror = "2.0.17"
chrono = { version = "0.4", features = ["clock"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
axum = { version = "0.8.7", features = ["json"] }
gloo-net = "0.6.0"
hyper = "1.8.1"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
bcrypt = "0.17.1"

# rusqlite = "0.37.0"
# sqlite = "0.37.0"
# rocksdb = "0.24.0"
# rand = "0.9.2"
# surreal = "0.4.1"
# utc = "0.2.0"
