[package]
name = "backend"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ibrahim-3595/Secure-Journal"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Password hashing (Argon2 only)
argon2 = { version = "0.5", default-features = false, features = ["std", "password-hash"] }
rand_core = "0.9.3" 

# CLI UX
dialoguer = "0.12.0"
rpassword = "7.4.0"
colored = "3.0.0"
indicatif = "0.18.2"

# Serialization & errors
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["clock"] }

# Database
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# Web server
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Optional but recommended
dotenvy = "0.15"
thiserror = "2.0.17"

# rusqlite = "0.37.0"
# sqlite = "0.37.0"
# rocksdb = "0.24.0"
# rand = "0.9.2"
# surreal = "0.4.1"
# utc = "0.2.0"