[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
reqwest = { version = "0.13", features = ["json"] }
async-std = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.1", features = ["web", "router"] }
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


