[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
serde = { version = "1", features = ["derive"] }

# Web only
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.5"
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"

# Desktop only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
reqwest = { version = "0.13", features = ["json"] }
async-std = "1"
