[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.43"
dioxus = { version = "0.7.1", features = ["router"] }
# dioxus-cli = "0.7.3"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["js", "v4", "serde"] } #added uuid

# Web only
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6.0"
gloo-timers = "0.3"
wasm-bindgen-futures = "0.4"

# Desktop only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.1", features = ["desktop", "router"] }
reqwest = { version = "0.13", features = ["json"] }
async-std = "1"
